# solana-rust-sdk-scripts

./: .env  Cargo.toml
keypairs/: signer-keypair.json  token-keypair.json  token22-keypair.json
src/: lib.rs
