[package]
name = "solana-rust-sdk-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
envy = "0.4.2"
dotenv = "0.15"
serde = "1.0.193"
serde_json = "1.0.108"
solana-account-decoder = "1.17.13"
solana-sdk = "1.17.13"
solana-client = "1.17.13"
spl-pod = "0.1.0"
spl-token = "4.0.0"
spl-token-2022 = "1"
spl-token-metadata-interface = "0.2.0"
spl-associated-token-account = "2.2.0"
url = { version = "2.5.0", features = ["serde"] }
